fixed uneven grid and moved dashboard buttons

--- a/site/assets/stylesheets/style.scss
+++ b/site/assets/stylesheets/style.scss
@@ -42,15 +42,23 @@
 		}
 
 		.btn-down{
-			position: absolute;
+			/*position: absolute;*/
 	    	bottom: 0;
 	    	margin-bottom: 20px;
+	    	margin-top: 10px;
 	    	width: 100px;
 		}
 
 		.btn-down.preview{
-			font-size: 48px;
-			width: 200px;
+			position: absolute;
+			bottom: -10px;
+			left: 20px;
+			font-size: 24px;
+			width: 250px;
+		}
+
+		.submit{
+			width: 100%;
 		}
     }
 
@@ -93,9 +101,9 @@
 	.btn-generate{
 		position: fixed;
 		z-index: 100;
-	    right: 0;
-	    top: 0;
-	    margin: 20px;
+	    right: 10px;
+	    bottom: 10px;
+	    font-size: 24px;
 	}
 }
 
@@ -328,5 +336,8 @@ $container_margin: 10%;
 	}
 	.row{
 		padding-top: 10px;
+	}
+	.panel-body{
+		height: 130px;
 	}
 }
